<resources>
    <string name="app_name">ClothesApp</string>
    <string name="register_">Don\'t Have an account? <font color='#EC407A'>Sign Up</font></string>
    <string name="select_user_type">Select User Type</string>
    <string name="please_select_either_customer_or_tailor">Please,Select either Customer or Tailor</string>
    <string name="customer">Customer</string>
    <string name="tailor">Tailor</string>
    <string name="title_activity_admin_dashboard">AdminDashboard</string>
    <string name="title_tailors">Tailors</string>
    <string name="title_customers">Customers</string>
    <string name="title_complaints">Complaints</string>
    <string name="waiting">Waiting</string>
    <string name="accepted">Accepted</string>
    <string name="rejected">Rejected</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="address">Address</string>
    <string name="state">State</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="tailor_accepted_successfully">Tailor Accepted Successfully</string>
    <string name="tailor_rejected_successfully">Tailor Rejected Successfully</string>
    <string name="please_wait_for_admin_approval">Please,Wait for admin approval</string>
    <string name="your_account_has_been_rejected">Your account has been rejected</string>
    <string name="invalid_email_or_password">Invalid email or password</string>
    <string name="customer_accepted_successfully">Customer Accepted Successfully</string>
    <string name="customer_rejected_successfully">Customer Rejected Successfully</string>
    <string name="title_activity_tailor_dashboard">TailorDashboard</string>
    <string name="title_my_works">My Designs</string>
    <string name="title_orders">Orders</string>
    <string name="title_profile">Profile</string>
    <string name="delete_work">Delete Design</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="deleted_successfully">Deleted Successfully</string>
    <string name="enter_description">Enter Description</string>
    <string name="description">Description</string>
    <string name="enter_title">Enter Title</string>
    <string name="title">Title</string>
    <string name="please_select_image_first">Please, Select Image First</string>
    <string name="saved_successfully">Saved Successfully</string>
    <string name="delete_image">Delete Image</string>
    <string name="uploading_image">Uploading Image</string>
    <string name="title_activity_customer_dashboard">CustomerDashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="update_profile">Update Profile</string>
    <string name="account_updated_successfully">Account Updated Successfully</string>
    <string name="create_order">Create Order</string>
    <string name="size">Size</string>
    <string name="enter_your_size">Enter Your Size</string>
    <string name="color">Color</string>
    <string name="enter_your_color">Enter Your Color</string>
    <string name="enter_your_description">Enter Description tp what you want</string>
    <string name="send_order">Send Order</string>
    <string name="waiting_for_tailor">Waiting For Tailor</string>
    <string name="waiting_for_customer_payment">Waiting For Customer Payment</string>
    <string name="accepted_paid"><![CDATA[Accepted & Paid]]></string>
    <string name="customer_name">Customer</string>
    <string name="date">Date</string>
    <string name="order_accepted">Order Accepted</string>
    <string name="tailor_name">Tailor</string>
    <string name="pay">Pay</string>
    <string name="price">Price</string>
    <string name="enter_price">Please, Enter Money</string>
    <string name="payment_">Payment</string>
    <string name="name_on_card">Name on Card *</string>
    <string name="credit_card_type">Credit Card Type *</string>
    <string name="credit_card_number">Credit Card Number *</string>
    <string name="card_expiration">Card Expiration *</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="cvv2">CVV2 *</string>
    <string name="pay_order">Pay Order!</string>
    <string name="order_paid_successfully">Order Paid Successfully</string>
    <string name="please_complete_data">Please,Complete Data</string>
    <string name="logout">Logout</string>
    <string name="tailors">Tailors List</string>
    <string name="customer_">Customer :</string>
    <string name="title_">Title :</string>
    <string name="description_">\nDescription :</string>
    <string name="reply">Reply :</string>
    <string name="enter_your_reply">Enter Your Reply</string>
    <string name="complaint_accepted_successfully">Reply Sent Successfully</string>
    <string name="complaint_added_successfully">Complaint Added Successfully</string>
    <string name="send">Send</string>

    <array name="card_types">
        <item>Visa</item>
        <item>Master Card</item>
    </array>
</resources>