<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.clothes.clothesapp.activities.customer.ui.home.HomeFragment"
        android:label="@string/tailors"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.clothes.clothesapp.activities.customer.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_complaints"
        android:name="com.clothes.clothesapp.activities.customer.ui.complaints.ComplaintsFragment"
        android:label="@string/title_complaints"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.clothes.clothesapp.activities.customer.ui.profile.CustomerProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_slideshow" />
</navigation>