<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/payment_"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            />

    </com.google.android.material.appbar.AppBarLayout>



    <LinearLayout
        android:padding="20dp"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">



        <TextView
            android:layout_gravity="center_horizontal"
            android:id="@+id/amount"
            android:textSize="20sp"
            android:textColor="#000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="#333"
            android:text="@string/name_on_card"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="text"
            android:background="@android:drawable/editbox_background"
            android:id="@+id/name_on_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="#333"
            android:text="@string/credit_card_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Spinner
            android:background="@android:drawable/editbox_background"
            android:entries="@array/card_types"
            android:id="@+id/card_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textSize="20sp"
            android:textColor="#333"
            android:text="@string/credit_card_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:inputType="number"
            android:background="@android:drawable/editbox_background"
            android:id="@+id/card_no"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <TextView
            android:textSize="20sp"
            android:textColor="#333"
            android:text="@string/card_expiration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:inputType="number"
                android:hint="@string/month"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:id="@+id/month"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />


            <EditText
                android:inputType="number"
                android:hint="@string/year"
                android:layout_weight="1"
                android:background="@android:drawable/editbox_background"
                android:id="@+id/year"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />


        </LinearLayout>


        <TextView
            android:textSize="20sp"
            android:textColor="#333"
            android:text="@string/cvv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <EditText
            android:background="@android:drawable/editbox_background"
            android:id="@+id/cvv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />



        <Button
            android:padding="10dp"
            android:textColor="@color/white"
            android:background="@drawable/btn_bg"
            android:layout_marginTop="10dp"
            android:text="@string/pay_order"
            android:id="@+id/pay"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>