<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_my_designs">

    <fragment
        android:id="@+id/navigation_my_designs"
        android:name="com.clothes.clothesapp.activities.tailor.ui.works.WorksFragment"
        android:label="@string/title_my_works"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_tailor_orders"
        android:name="com.clothes.clothesapp.activities.tailor.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_tailor_profile"
        android:name="com.clothes.clothesapp.activities.tailor.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_notifications" />
</navigation>