<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_tailors">

    <fragment
        android:id="@+id/navigation_tailors"
        android:name="com.clothes.clothesapp.activities.admin.ui.tailors.TailorsFragment"
        android:label="@string/title_tailors"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_customers"
        android:name="com.clothes.clothesapp.activities.admin.ui.customers.CustomersFragment"
        android:label="@string/title_customers"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_complaints"
        android:name="com.clothes.clothesapp.activities.admin.ui.complaints.NotificationsFragment"
        android:label="@string/title_complaints"
        tools:layout="@layout/fragment_notifications" />
</navigation>