<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">


    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">



        <LinearLayout
            android:padding="10dp"
            android:weightSum="3"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/title"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/enter_title"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_bg"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/description"
                android:inputType="text"
                android:padding="10dp"
                android:hint="@string/enter_description"
                android:layout_marginTop="5dp"
                android:background="@drawable/input_bg"
                android:layout_marginEnd="30dp"
                android:layout_marginStart="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/actions_area"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@drawable/btn_bg"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/send"
                android:id="@+id/accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/purple_500"
                android:background="@drawable/input_bg"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/cancel"
                android:id="@+id/reject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>




    </LinearLayout>
</com.google.android.material.card.MaterialCardView>