<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp">



    <ImageView
        android:background="@drawable/ic_image"
        android:id="@+id/select_image"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>


    <TextView
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/title"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/title"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/enter_title"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@color/black"
        android:textSize="20sp"
        android:text="@string/description"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/content"
        android:inputType="text"
        android:padding="10dp"
        android:hint="@string/enter_description"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_bg"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <android.widget.Button
        android:id="@+id/save"
        android:textColor="@color/white"
        android:text="Save"
        android:background="@drawable/btn_bg"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginStart="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>