<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="10dp"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:text="@string/select_user_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <TextView
                android:layout_marginTop="10dp"
                android:textColor="@color/purple_200"
                android:textSize="20sp"
                android:text="@string/please_select_either_customer_or_tailor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>


            <LinearLayout
                android:padding="10dp"
                android:layout_marginTop="20dp"
                android:weightSum="2"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/white"
                    android:background="@drawable/btn_bg"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/customer"
                    android:id="@+id/customer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>


                <TextView
                    android:paddingBottom="10dp"
                    android:paddingTop="10dp"
                    android:gravity="center_horizontal"
                    android:textColor="@color/purple_500"
                    android:background="@drawable/input_bg"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/tailor"
                    android:id="@+id/tailor"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>