<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@color/browser_actions_bg_grey"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="10dp">

        <LinearLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />


            <EditText
                android:layout_marginTop="10dp"
                android:inputType="numberDecimal"
                android:padding="10dp"
                android:background="@drawable/input_bg"
                android:id="@+id/money"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_price" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:padding="10dp"
                android:weightSum="2">

                <TextView
                    android:id="@+id/save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/accept"
                    android:textColor="@color/white" />


                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/input_bg"
                    android:gravity="center_horizontal"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:text="@string/cancel"
                    android:textColor="@color/purple_500" />

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>