<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    app:cardElevation="0dp"
    android:layout_margin="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="wrap_content">


    <LinearLayout
        android:padding="10dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <TextView
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>




        <LinearLayout
            android:padding="10dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/email"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>

        <View
            android:background="@color/black"
            android:layout_width="match_parent"
            android:layout_height="2dp"/>


        <LinearLayout
            android:padding="10dp"
            android:weightSum="3"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textColor="@color/black"
                android:layout_weight="1"
                android:textSize="18sp"
                android:text="@string/state"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:textColor="@color/black"
                android:id="@+id/state"
                android:layout_weight="2"
                android:textSize="18sp"
                android:text="@string/name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>


        <LinearLayout
            android:id="@+id/actions_area"
            android:padding="10dp"
            android:layout_marginTop="20dp"
            android:weightSum="2"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:background="@drawable/btn_bg"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/accept"
                android:id="@+id/accept"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>


            <TextView
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center_horizontal"
                android:textColor="@color/purple_500"
                android:background="@drawable/input_bg"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:text="@string/reject"
                android:id="@+id/reject"
                android:layout_width="0dp"
                android:layout_height="wrap_content"/>

        </LinearLayout>




    </LinearLayout>
</com.google.android.material.card.MaterialCardView>